--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,9 @@
 .modal {
-  position: fixed;
+  position: relative;
   width: 80%;
   height: auto;
-  top: 300px;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 50px;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 3fr;
 }
