--- a/public/styles.css
+++ b/public/styles.css
@@ -189,3 +189,28 @@
 img {
   padding: 10px;
 }
+
+.button-write {
+  float: right;
+  display: block;
+  clear: both;
+  background-color:rgb(66, 108, 144);
+  background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 0px, rgba(255, 255, 255, 0) 100%);
+  bottom: auto ;
+  box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 0px 0px inset;
+  box-sizing: border-box;
+  color: rgb(255, 255, 255);
+  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  height: 44px;
+  line-height: 28px;
+  margin: 0;
+  padding: 8px 16px 8px 16px;
+  text-align: center;
+  width: 131.438px;
+}
+
+.button-write:hover {
+  background-color: rgb(43, 69, 92);
+}
