--- a/public/styles.css
+++ b/public/styles.css
@@ -259,6 +259,38 @@ img {
   border-right: 2px solid;
 }
 
+.dropbtn {
+  background: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
 
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1);
+  z-index: 1;
+}
+
+.dropdown-content div {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content div:hover {
+  background-color: rgb(43, 69, 92);
+  color: white;
+}
+
+.dropdown:hover .dropdown-content {display: block;}
 
