--- a/public/styles.css
+++ b/public/styles.css
@@ -301,3 +301,20 @@ img {
 
 .dropdown:hover .dropdown-content {display: block;}
 
+.button-helpful {
+  background-color: rgb(237, 237, 237);
+  background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 0px, rgba(255, 255, 255, 0) 100%);
+  border-color: rgb(204, 204, 204);
+  border-style: solid;
+  border-width: 1px;
+  box-sizing: border-box;
+  color: rgb(0, 0, 0);
+  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  height: 30px;
+  line-height: 24px;
+  padding: 2px 10px 2px 10px;
+  text-align: center;
+  width: auto;
+}
