--- a/public/styles.css
+++ b/public/styles.css
@@ -322,3 +322,11 @@ img {
   text-align: center;
   width: auto;
 }
+.button-helpful:hover {
+  box-shadow: inset 0 0 0 50px rgba(0, 0, 0, 0.1);
+}
+
+.button-load-more {
+  width: 50%;
+  margin: 0 auto;
+}
