FIlter buttons styles

--- a/public/styles.css
+++ b/public/styles.css
@@ -191,13 +191,11 @@ img {
   padding: 10px;
 }
 
-.button-write, .button-filter {
-  float: right;
-  display: block;
+.button-write, .button-filter, .button-clear-filter {
+  display: inline-block;
   clear: both;
   background-color:rgb(66, 108, 144);
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 0px, rgba(255, 255, 255, 0) 100%);
-  bottom: auto ;
   box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 0px 0px inset;
   box-sizing: border-box;
   color: rgb(255, 255, 255);
@@ -211,6 +209,19 @@ img {
   text-align: center;
   width: 131.438px;
 }
+
+.button-clear-filter{
+  background-color: rgb(237, 237, 237);
+  border-color: rgb(204, 204, 204);
+  border-style: solid;
+  border-width: 1px;
+  color: black;
+}
+
+.f-right {
+  float: right;
+}
+
 
 .button-write:hover {
   background-color: rgb(43, 69, 92);
@@ -303,9 +314,11 @@ img {
   color: white;
 }
 
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
-.button-helpful, .button-clear-filter {
+.button-helpful {
   background-color: rgb(237, 237, 237);
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 0px, rgba(255, 255, 255, 0) 100%);
   border-color: rgb(204, 204, 204);
