--- a/public/styles.css
+++ b/public/styles.css
@@ -301,12 +301,14 @@ img {
   margin: 0 auto;
 }
 .rating-bar-num {
+  margin-left: 10px;
   padding: 5px 2px 3px 5px;
 }
 .rating-bar {
   width: 50%;
   min-width: 150px;
   height: 10px;
+  z-index: -1;
   border-radius: 2px;
   position: relative;
   display: inline-block;
