--- a/public/styles.css
+++ b/public/styles.css
@@ -308,29 +308,28 @@ img {
   width: 50%;
   min-width: 150px;
   height: 10px;
-  z-index: -1;
   border-radius: 2px;
   position: relative;
   display: inline-block;
-  background-color: #c5c5c5;
-  background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.3) 0px, rgba(255, 255, 255, 0) 100%);
   margin: 5px 10px 3px 10px;
 }
 .rating-bar-top {
-  color: #e7711b;
+  background-color: #e7711b;
+  border-radius: 2px;
   padding: 0;
   position: absolute;
-  z-index: 2;
   display: block;
+  height: 10px;
   top: 0;
   left: 0;
-  height: 10px;
   overflow: hidden;
 }
 .rating-bar-bottom {
   padding: 0;
   display: block;
-  z-index: 0;
+  border-radius: 2px;
+  background-color: #c5c5c5;
+  background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.3) 0px, rgba(255, 255, 255, 0) 100%);
   height: 10px;
 }
 #review-index {
