--- a/public/styles.css
+++ b/public/styles.css
@@ -257,9 +257,10 @@ img {
   font-weight: 400;
   height: 30px;
   line-height: 24px;
-  padding: 2px 10px 2px 10px;
+  padding: 3px 10px 3px 10px;
   text-align: center;
   width: auto;
+  margin-right: 5px;
 }
 .button-helpful:hover {
   box-shadow: inset 0 0 0 50px rgba(0, 0, 0, 0.1);
@@ -338,6 +339,7 @@ img {
 }
 #fit-bar-container {
   display: inline-block;
+  width: 100%;
 }
 .inline-top {
   display: inline-block;
@@ -390,4 +392,31 @@ img {
 }
 #fit-bar {
   position: relative;
+}
+.bold {
+  line-height: 30px;
+  font-weight: 700;
+  padding-left: 3px;
+}
+.title-review {
+  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 32px;
+}
+.text-review {
+  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  margin-bottom: 16px;
+}
+#review-list-item-footer {
+  margin-top: 20px
+}
+.pad-right {
+  padding-right: 10px;
+}
+.center {
+  margin: auto 0;
 }
