--- a/public/styles.css
+++ b/public/styles.css
@@ -110,10 +110,13 @@
   color: #505050;
 }
 .input-field {
-  padding: 0 0 0 10px;
+  padding: 7.5px 15px;
   margin: 0 0 10px 12px;
   width: 90%;
   height: auto;
+  border-radius: 4px;
+  border: 1px solid;
+  border-color: rgb(221, 221, 221);
 }
 .review-title {
   margin-top: 0px;
@@ -143,6 +146,7 @@
 .review-body {
   display: grid;
   grid-template-columns: 2fr 1fr;
+  padding-left: 10px;
 }
 img {
   padding: 10px;
@@ -401,7 +405,6 @@ img {
   border-style: solid;
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 0px, rgba(255, 255, 255, 0) 100%);
   border-bottom-color: #aaaaaa;
-  border-radius: 4px;
   border-left-color: #d0d0d0;
   border-right-color: #cccccc;
   border-top-color: #cccccc;
@@ -411,7 +414,6 @@ img {
   display: inline-block;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 28px;
-  height: 16px;
   line-height: 16px;
   margin: 0px;
   padding: 8px;
@@ -420,6 +422,19 @@ img {
   text-decoration-color: #666666;
   text-shadow: 1px 1px rgb(153, 153, 153);
   transition-duration: 0.2s;
+}
+.rating-star-1 {
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+}
+.rating-star-2,
+.rating-star-3,
+.rating-star-4 {
+  
+}
+.rating-star-5 {
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
 }
 .star-Poor {
   background-color: #b43034;
