--- a/public/styles.css
+++ b/public/styles.css
@@ -82,11 +82,9 @@
   border-style: solid;
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 0px, rgba(255, 255, 255, 0) 100%);
   border-bottom-color: #aaaaaa;
-  border-bottom-left-radius: 4px;
   border-left-color: #d0d0d0;
   border-right-color: #cccccc;
   border-top-color: #cccccc;
-  border-top-left-radius: 4px;
   box-shadow: #ffffff 0px 1px 0px 0px, #ffffff 0px 1px 0px 0px inset;
   box-sizing: content-box;
   clear: both;
@@ -100,14 +98,19 @@
   height: 16px;
   line-height: 16px;
   margin: 0px;
-  padding: 8px 0px 8px 0px;
+  padding: 10px 15px;
   position: relative;
   text-align: center;
   text-decoration-color: #666666;
   transition-duration: 0.2s;
 }
-.button-recommend:hover {
-  color: #505050;
+.button-yes {
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+}
+.button-no {
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
 }
 .input-field {
   padding: 7.5px 15px;
@@ -160,6 +163,7 @@ img {
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 0px, rgba(255, 255, 255, 0) 100%);
   box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 0px 0px inset;
   box-sizing: border-box;
+  cursor: pointer;
   color: #ffffff;
   font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -167,6 +171,7 @@ img {
   height: 44px;
   line-height: 28px;
   margin: 0;
+  margin-left: 10px;
   padding: 8px 16px 8px 16px;
   text-align: center;
 }
@@ -209,13 +214,16 @@ img {
 }
 .dropdown {
   display: inline-block;
+  cursor: default;
 }
 .dropdown-content {
   display: none;
   position: absolute;
+  cursor: default;
   background-color: white;
   min-width: 160px;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+  z-index: 2;
 }
 .dropdown-content div {
   color: black;
@@ -248,7 +256,9 @@ img {
   width: auto;
   margin-right: 5px;
 }
-.button-helpful:hover {
+.button-helpful:hover,
+.button-recommend:hover
+{
   box-shadow: inset 0 0 0 50px rgba(0, 0, 0, 0.1);
 }
 .button-load-more {
@@ -343,7 +353,7 @@ img {
   display: inline-block;
 }
 .divider {
-  height: 10px;
+  height: 11px;
   background-color: black;
   width: 1%;
   display: inline-block;
@@ -359,6 +369,9 @@ img {
 }
 .pad-top {
   padding-top: 5px;
+}
+.pad-left {
+  padding-left: 10px;
 }
 .fit-slider {
   width: 10px;
@@ -450,4 +463,83 @@ img {
 }
 .star-Excellent {
   background-color: #338b2b;
+}
+textarea {
+  overflow: hidden;
+  resize: none;
+}
+.select-button {
+  border-radius: 4.25px;
+  border: 1px solid black;
+  background-color: white;
+  border-color: rgb(204, 204, 204);
+  font-style: italic;
+  padding: 5px;
+  cursor: pointer;
+  font-size: 17px;
+  height: 32px;
+  font-family: Arial;
+  box-shadow: rgb(255, 255, 255) 0px 1px 0px 0px, rgb(255, 255, 255) 0px 1px 0px 0px inset;
+  width: 90%;
+  color: rgb(102, 102, 102);
+}
+input[type=checkbox] {
+  width:17px;
+  height:17px;
+  margin-top: 0px;
+}
+.container {
+  display: inline-block;
+  position: relative;
+  padding-left: 29px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+.checkmark {
+  position: absolute;
+  border: 1px solid;
+  border-left-color: rgb(208, 208, 208);
+  border-right-color: rgb(204, 204, 204);
+  border-bottom-color: rgb(170, 170, 170);
+  border-top-color: rgb(204, 204, 204);
+  top: 0;
+  left: 0;
+  height: 35px;
+  width: 30px;
+  background-color: #ccc;
+  border-radius: 4%;
+	background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 0px, rgba(255, 255, 255, 0) 100%);
+}
+.container:hover input ~ .checkmark {
+  background-color: rgb(170, 170, 170);
+}
+.container input:checked ~ .checkmark {
+  background-color: rgb(170, 170, 170);
+}
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.container .checkmark:after {
+ 	top: 12px;
+	left: 11px;
+	width: 9px;
+	height: 9px;
+	border-radius: 50%;
+	background: rgb(0, 102, 180);
 }
