--- a/public/styles.css
+++ b/public/styles.css
@@ -171,7 +171,7 @@ img {
   height: 44px;
   line-height: 28px;
   margin: 0;
-  margin-left: 10px;
+  margin-left: 20px;
   padding: 8px 16px 8px 16px;
   text-align: center;
 }
@@ -219,7 +219,7 @@ img {
 .dropdown-content {
   display: none;
   position: absolute;
-  cursor: default;
+  cursor: pointer;
   background-color: white;
   min-width: 160px;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
@@ -371,7 +371,7 @@ img {
   padding-top: 5px;
 }
 .pad-left {
-  padding-left: 10px;
+  padding-left: 20px;
 }
 .fit-slider {
   width: 10px;
@@ -487,6 +487,7 @@ input[type=checkbox] {
   width:17px;
   height:17px;
   margin-top: 0px;
+  margin-left: 20px
 }
 .container {
   display: inline-block;
@@ -542,4 +543,10 @@ input[type=checkbox] {
 	height: 9px;
 	border-radius: 50%;
 	background: rgb(0, 102, 180);
+}
+.email-warning {
+  font-size: 11.4px;
+  line-height: 19.5px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-left: 20px;
 }
