--- a/public/styles.css
+++ b/public/styles.css
@@ -171,9 +171,11 @@ img {
   height: 44px;
   line-height: 28px;
   margin: 0;
-  margin-left: 20px;
   padding: 8px 16px 8px 16px;
   text-align: center;
+}
+.post-review {
+  margin-left: 20px;
 }
 .button-clear-filter {
   background-color: #ededed;
@@ -549,4 +551,5 @@ input[type=checkbox] {
   line-height: 19.5px;
   font-family: Arial, Helvetica, sans-serif;
   padding-left: 20px;
+  margin: 10px 0;
 }
