--- a/public/styles.css
+++ b/public/styles.css
@@ -251,6 +251,7 @@ img {
   color: #000000;
   font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
+  cursor: pointer;
   font-weight: 400;
   height: 30px;
   line-height: 24px;
