--- a/public/styles.css
+++ b/public/styles.css
@@ -39,20 +39,6 @@
 #rating-text {
   padding-left: 20px;
 }
-.check-default {
-  float: right;
-  padding-right: 15px;
-  color: #767676;
-}
-.check-hidden,
-.hidden {
-  display: none;
-}
-.check-complete {
-  float: right;
-  padding-right: 15px;
-  color: #338b2b;
-}
 .same-line {
   display: inline;
 }
@@ -62,6 +48,7 @@
 }
 #modal-right {
   height: auto;
+  min-width: 600px;
 }
 .modal-right-el {
   background-color: white;
@@ -70,7 +57,7 @@
   height: auto;
   display: block;
   padding: 10px 0;
-  min-width: 525px;
+  
 }
 .modal-grid {
   display: grid;
@@ -554,4 +541,33 @@ input[type=checkbox] {
   font-family: Arial, Helvetica, sans-serif;
   padding-left: 20px;
   margin: 10px 0;
+}
+.status-check {
+  position: relative;
+  float: right;
+  margin-right: 15px;
+  padding-right: 5px;
+}
+.check-gray {
+  color: #767676;
+}
+.check-hidden,
+.hidden {
+  display: none;
+}
+.check-green {
+  color: #338b2b;
+}
+.check-red {
+  color: rgb(180, 48, 52);
+  border: solid 1px rgb(180, 48, 52);
+  border-radius: 13px;
+}
+.icon {
+  border: 0px;
+  display: inline-block;
+}
+.required-text {
+  display: inline-block;
+  padding: 5px;
 }
