--- a/public/styles.css
+++ b/public/styles.css
@@ -60,7 +60,7 @@
 }
 .modal-container {
   display: grid;
-  grid-template-columns: 1fr 40fr 4fr;
+  grid-template-columns: 1fr 30fr 3fr;
 }
 .modal-grid {
   display: grid;
@@ -104,7 +104,7 @@
 }
 .input-field {
   padding: 7.5px 15px;
-  margin: 0 0 10px 12px;
+  margin: 0 0 10px 0;
   width: 90%;
   height: auto;
   border-radius: 4px;
@@ -130,7 +130,7 @@
 }
 .review-header {
   margin: 0px;
-  padding: 0 ;
+  padding: 10px 0;
   font-family: Sentinel, Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 700px;
@@ -547,7 +547,8 @@ input[type=checkbox] {
 }
 .status-check {
   position: relative;
-  margin: auto auto;
+  margin: 0 auto;
+  margin-top: 5px;
 }
 .check-gray {
   color: #767676;
@@ -583,6 +584,7 @@ input[type=checkbox] {
   display: block;
 }
 .arrow-container {
-  width: 20px;
+  margin-top: 10px;
+  width: auto;
   height: auto;
 }
