--- a/public/styles.css
+++ b/public/styles.css
@@ -62,6 +62,9 @@
   display: grid;
   grid-template-columns: 1fr 30fr 3fr;
 }
+.modal-container:focus {
+  border: 0;
+}
 .modal-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -163,9 +166,6 @@ img {
   margin: 0;
   padding: 8px 16px 8px 16px;
   text-align: center;
-}
-.post-review {
-  margin-left: 20px;
 }
 .button-clear-filter {
   background-color: #ededed;
@@ -481,7 +481,6 @@ input[type=checkbox] {
   width:17px;
   height:17px;
   margin-top: 0px;
-  margin-left: 20px
 }
 .container {
   display: inline-block;
@@ -542,7 +541,6 @@ input[type=checkbox] {
   font-size: 11.4px;
   line-height: 19.5px;
   font-family: Arial, Helvetica, sans-serif;
-  padding-left: 20px;
   margin: 10px 0;
 }
 .status-check {
