--- a/public/styles.css
+++ b/public/styles.css
@@ -409,9 +409,9 @@ img {
 .pad-right {
   padding-right: 10px;
 }
-.center {
-  margin: auto 0;
-  padding: 0 10px;
+.review-fit-bar {
+  margin: 60px 0;
+  padding: 0 20px;
 }
 .rating-star {
   background-color: #ededed;
