--- a/public/styles.css
+++ b/public/styles.css
@@ -49,7 +49,6 @@
 #modal-left {
   background-color: #e5e5e5;
   height: auto;
-  max-width: 300px;
 }
 #modal-right {
   height: auto;
@@ -153,7 +152,7 @@
   padding-left: 10px;
 }
 .image{
-  max-width: 200px;
+  max-width: 100%;
 }
 .image img {
   height: 100%;
