--- a/public/styles.css
+++ b/public/styles.css
@@ -338,6 +338,9 @@
 #filters-title {
   margin-bottom: 5px;
 }
+.fit-text {
+  width: 200px;
+}
 #fit-bar-container {
   display: inline-block;
   width: 100%;
@@ -500,21 +503,26 @@ input[type=checkbox] {
 .container {
   display: inline-block;
   position: relative;
-  padding-left: 23px;
+  border-radius: 4%;
   margin-bottom: 12px;
-  height: 40px;
-  width: 45px;
+  height: 35px;
+  width: 40px;
   cursor: pointer;
   font-size: 22px;
+  background-color: rgb(237, 237, 237);
+
+  border: 1px solid #cccccc;
+  box-shadow: #ffffff 0px 1px 0px 0px, #ffffff 0px 1px 0px 0px inset;
 }
 .checkmark {
   position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-  border-radius: 4%;
+  top: 25%;
+  left: 30%;
+  height: 15px;
+  width: 15px;
+  background-color:blue;
+  border-radius: 50%;
+  
 }
 .container:hover {
   background-color: rgb(170, 170, 170);
