--- a/public/styles.css
+++ b/public/styles.css
@@ -535,6 +535,20 @@ input[type=checkbox] {
   position: absolute;
   display: none;
 }
+.spinner {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+.spinner img {
+  position: relative;
+  left: 45%;
+  top: 45%
+  height: 100px;
+  width: 100px;
+  z-index: 2;
+
+}
 .container input:checked ~ .checkmark:after {
   display: block;
 }
