--- a/public/styles.css
+++ b/public/styles.css
@@ -543,7 +543,7 @@ input[type=checkbox] {
 .spinner img {
   position: relative;
   left: 45%;
-  top: 45%
+  top: 45%;
   height: 100px;
   width: 100px;
   z-index: 2;
