--- a/public/styles.css
+++ b/public/styles.css
@@ -395,7 +395,12 @@
 .bold {
   line-height: 30px;
   font-weight: 700;
-  padding-left: 3px;
+}
+.bold-right{
+  padding-right: 5px;
+}
+.bold-left {
+  padding-left: 5px;
 }
 .title-review {
   font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -619,6 +624,7 @@ input[type=checkbox] {
   display: block;
 }
 .arrow-container {
+  display: absolute;
   margin-top: 10px;
   width: auto;
   height: auto;
@@ -633,4 +639,54 @@ input[type=checkbox] {
 }
 #product-info {
   padding: 5%;
+}
+.sort-text {
+  position: absolute;
+  padding: 5px;
+  margin: 1em 0 3em;
+  border: 1px solid rgb(153, 153, 153);
+  color: black;
+  background-color: white;
+  font-family: Sentinel, Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 19.5px;
+  font-size: 13px;
+  border-radius: 5px;
+  width: 320px;
+  height: 78px;
+  left: -160px;
+}
+.sort-text:before {
+  top: -20px;
+  bottom: auto;
+  left: auto;
+  right: 40px;
+  border-width: 0 20px 20px;
+  content: "";
+  position: absolute;
+  bottom: -20px;
+  left: 40px;
+  border-width: 20px 20px 0;
+  border-style: solid;
+  border-color: #5a8f00 transparent;
+  display: block;
+  width: 0;
+}
+.sort-text:after {
+  top: -13px;
+  bottom: auto;
+  left: auto;
+  right: 47px;
+  border-width: 0 13px 13px;
+  content: "";
+  position: absolute;
+  bottom: -13px;
+  left: 47px;
+  border-width: 13px 13px 0;
+  border-style: solid;
+  border-color: #fff transparent;
+  display: block;
+  width: 0;
+}
+.sort-text-container {
+  position: relative;
 }
