--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,9 @@
-.nav {
+#reviews .nav {
   display: grid;
   grid-template-columns: 1fr 1fr;
   clear: both;
 }
-.modal {
+#reviews .modal {
   position: absolute;
   width: 80%;
   height: auto;
@@ -15,7 +15,7 @@
   grid-template-columns: 1fr 3fr;
   z-index: 4;
 }
-.modal-background {
+#reviews .modal-background {
   z-index: 3;
   position: fixed;
   top: 0;
@@ -24,37 +24,37 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
 }
-.button-select {
+#reviews .button-select {
   background-color: rgb(102, 102, 102);
   color: white;
 }
-.cancel {
+#reviews .cancel {
   color: #767676;
   float: right;
   position: relative;
   margin-right: 5px;
 }
-.cancel:hover {
+#reviews .cancel:hover {
   color: #505050;
 }
-#stars {
+#reviews #stars {
   padding-left: 20px;
 }
-#rating-text {
+#reviews #rating-text {
   padding-left: 20px;
 }
-.same-line {
+#reviews .same-line {
   display: inline;
 }
-#modal-left {
+#reviews #modal-left {
   background-color: #e5e5e5;
   height: auto;
 }
-#modal-right {
+#reviews #modal-right {
   height: auto;
   min-width: 600px;
 }
-.modal-right-el {
+#reviews .modal-right-el {
   background-color: white;
   border-bottom: 1px solid;
   border-color: rgb(229, 229, 229);
@@ -62,18 +62,18 @@
   display: block;
   padding: 10px 0;
 }
-.modal-container {
+#reviews .modal-container {
   display: grid;
   grid-template-columns: 1fr 30fr;
 }
-.modal-container:focus {
+#reviews .modal-container:focus {
   border: 0;
 }
-.modal-grid {
+#reviews .modal-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
-.button-recommend {
+#reviews .button-recommend {
   border-width: 1px;
   border-style: solid;
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 0px, rgba(255, 255, 255, 0) 100%);
@@ -100,19 +100,19 @@
   text-decoration-color: #666666;
   transition-duration: 0.2s;
 }
-.button-normal {
+#reviews .button-normal {
   background-color: #ededed;
   color: #666666;
 }
-.button-yes {
+#reviews .button-yes {
   border-bottom-left-radius: 4px;
   border-top-left-radius: 4px;
 }
-.button-no {
+#reviews .button-no {
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
 }
-.input-field {
+#reviews .input-field {
   padding: 7.5px 15px;
   margin: 0 0 10px 0;
   width: 90%;
@@ -121,7 +121,7 @@
   border: 1px solid;
   border-color: rgb(221, 221, 221);
 }
-.review-title {
+#reviews .review-title {
   margin-top: 0px;
   margin-bottom: 0px;
   padding: 20px 12px 20px 12px;
@@ -130,7 +130,7 @@
   font-weight: 400px;
   line-height: 30px;
 }
-.required {
+#reviews .required {
   font-family: Arial, Helvetica, sans-serif;
   padding: 0px 20px 0px 20px;
   margin: 0 0 11px 0;
@@ -138,7 +138,7 @@
   font-weight: 400px;
   font-size: 11.7px;
 }
-.review-header {
+#reviews .review-header {
   margin: 0px;
   padding: 10px 0;
   font-family: Sentinel, Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -146,19 +146,19 @@
   font-weight: 700px;
   line-height: 24px;
 }
-.review-body {
+#reviews .review-body {
   display: grid;
   grid-template-columns: 2fr 1fr;
   padding-left: 10px;
 }
-.image{
+#reviews .image{
   max-width: 100%;
 }
-.image img {
+#reviews .image img {
   height: 100%;
   width: 100%;
 }
-.button-write,
+#reviews .button-write,
 .button-filter,
 .button-clear-filter {
   display: inline-block;
@@ -178,7 +178,7 @@
   padding: 8px 16px 8px 16px;
   text-align: center;
 }
-.button-clear-filter {
+#reviews .button-clear-filter {
   background-color: #ededed;
   border-color: #cccccc;
   border-style: solid;
@@ -186,10 +186,10 @@
   color: black;
   margin-left: 5px;
 }
-.f-right {
+#reviews .f-right {
   float: right;
 }
-.content-title {
+#reviews .content-title {
   padding: 0 20px 0 12px;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -198,7 +198,7 @@
   font-weight: 400;
   font-stretch: 100%;
 }
-.hist-title {
+#reviews .hist-title {
   padding: 5px;
   margin: 5px;
   font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -206,20 +206,20 @@
   line-height: 28px;
   font-weight: 400;
 }
-.button-write:hover {
+#reviews .button-write:hover {
   background-color: #2b455c;
 }
-.dropbtn {
+#reviews .dropbtn {
   background: white;
   padding: 16px;
   font-size: 16px;
   border: none;
 }
-.dropdown {
+#reviews .dropdown {
   display: inline-block;
   cursor: default;
 }
-.dropdown-content {
+#reviews .dropdown-content {
   display: none;
   position: absolute;
   right: 0;
@@ -229,20 +229,20 @@
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
   z-index: 2;
 }
-.dropdown-content div {
+#reviews .dropdown-content div {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
-.dropdown-content div:hover {
+#reviews .dropdown-content div:hover {
   background-color: #2b455c;
   color: white;
 }
-.dropdown:hover .dropdown-content {
+#reviews .dropdown:hover .dropdown-content {
   display: block;
 }
-.button-helpful {
+#reviews .button-helpful {
   background-color: #ededed;
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 0px, rgba(255, 255, 255, 0) 100%);
   border-color: #cccccc;
@@ -261,20 +261,20 @@
   width: auto;
   margin-right: 5px;
 }
-.button-helpful:hover,
+#reviews .button-helpful:hover,
 .button-recommend:hover
 {
   box-shadow: inset 0 0 0 50px rgba(0, 0, 0, 0.1);
 }
-.button-load-more {
+#reviews .button-load-more {
   width: 50%;
   margin: 20px auto;
 }
-.rating-bar-num {
+#reviews .rating-bar-num {
   margin-left: 10px;
   padding: 5px 2px 3px 5px;
 }
-.rating-bar {
+#reviews .rating-bar {
   width: 50%;
   min-width: 150px;
   height: 10px;
@@ -283,7 +283,7 @@
   display: inline-block;
   margin: 5px 10px 3px 10px;
 }
-.rating-bar-top {
+#reviews .rating-bar-top {
   background-color: #e7711b;
   border-radius: 2px;
   padding: 0;
@@ -294,7 +294,7 @@
   left: 0;
   overflow: hidden;
 }
-.rating-bar-bottom {
+#reviews .rating-bar-bottom {
   padding: 0;
   display: block;
   border-radius: 2px;
@@ -302,10 +302,10 @@
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.3) 0px, rgba(255, 255, 255, 0) 100%);
   height: 10px;
 }
-#review-index {
+#reviews #review-index {
   padding: 16px 16px 16px 12px;
 }
-.star-ratings {
+#reviews .star-ratings {
   unicode-bidi: bidi-override;
   display: inline-block;
   color: #c5c5c5;
@@ -317,7 +317,7 @@
   padding: 0;
   text-shadow: 0px 1px 0 #a2a2a2;
 }
-.star-ratings-top {
+#reviews .star-ratings-top {
   color: #e7711b;
   padding: 0;
   position: absolute;
@@ -326,62 +326,62 @@
   left: 0;
   overflow: hidden;
 }
-.star-ratings-bottom {
+#reviews .star-ratings-bottom {
   padding: 0;
   display: block;
   z-index: -1;
 }
-#active-filters {
+#reviews #active-filters {
   padding: 10px;
   margin-bottom: 10px;
 }
-#filters-title {
+#reviews #filters-title {
   margin-bottom: 5px;
 }
-.fit-text {
+#reviews .fit-text {
   width: 200px;
 }
-#fit-bar-container {
+#reviews #fit-bar-container {
   display: inline-block;
   width: 100%;
 }
-.inline-top {
+#reviews .inline-top {
   display: inline-block;
   top: 0px;
 }
-.fit-body {
+#reviews .fit-body {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr 1fr;
 }
-.fit-bar-block {
+#reviews .fit-bar-block {
   height: 8px;
   border: 1px solid;
   width: 23%;
   border-color: rgb(204, 204, 204);
   display: inline-block;
 }
-.divider {
+#reviews .divider {
   height: 11px;
   background-color: black;
   width: 1%;
   display: inline-block;
 }
-.fit-bar-label {
+#reviews .fit-bar-label {
   font-size: 10px;
   margin: 0;
   padding: 5px 0 0 0;
   color: rgb(153, 153, 153);
 }
-.pad-bot {
+#reviews .pad-bot {
   padding-bottom: 5px;
 }
-.pad-top {
+#reviews .pad-top {
   padding-top: 5px;
 }
-.pad-left {
+#reviews .pad-left {
   padding-left: 20px;
 }
-.fit-slider {
+#reviews .fit-slider {
   width: 10px;
   height: 12px;
   top: 3px;
@@ -389,43 +389,43 @@
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.3) 0px, rgba(255, 255, 255, 0) 100%);
   position: absolute;
 }
-#fit-bar {
+#reviews #fit-bar {
   position: relative;
 }
-.bold {
+#reviews .bold {
   line-height: 30px;
   font-weight: 700;
 }
-.bold-right{
+#reviews .bold-right{
   padding-right: 5px;
 }
-.bold-left {
+#reviews .bold-left {
   padding-left: 5px;
 }
-.title-review {
+#reviews .title-review {
   font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 32px;
 }
-.text-review {
+#reviews .text-review {
   font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
   margin-bottom: 16px;
 }
-#review-list-item-footer {
+#reviews #review-list-item-footer {
   margin-top: 20px
 }
-.pad-right {
+#reviews .pad-right {
   padding-right: 10px;
 }
-.review-fit-bar {
+#reviews .review-fit-bar {
   margin: 60px 0;
   padding: 0 20px;
 }
-.rating-star {
+#reviews .rating-star {
   background-color: #ededed;
   border-width: 1px;
   border-style: solid;
@@ -449,43 +449,43 @@
   text-shadow: 1px 1px rgb(153, 153, 153);
   transition-duration: 0.2s;
 }
-.rating-star-1 {
+#reviews .rating-star-1 {
   border-bottom-left-radius: 4px;
   border-top-left-radius: 4px;
 }
-.rating-star-5 {
+#reviews .rating-star-5 {
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
 }
-.star-Poor {
+#reviews .star-Poor {
   background-color: #b43034;
 }
-.no-border{
+#reviews .no-border{
   border: 0;
 }
-.button-no-color {
+#reviews .button-no-color {
   color: #b43034;
 }
-.button-yes-color {
+#reviews .button-yes-color {
   color: #338b2b;
 }
-.star-Fair {
+#reviews .star-Fair {
   background-color: #de9500;
 }
-.star-Average {
+#reviews .star-Average {
   background-color: #ecdb00;
 }
-.star-Good {
+#reviews .star-Good {
   background-color: #8ac100;
 }
-.star-Excellent {
+#reviews .star-Excellent {
   background-color: #338b2b;
 }
-textarea {
+#reviews textarea {
   overflow: hidden;
   resize: none;
 }
-.select-button {
+#reviews .select-button {
   border-radius: 4.25px;
   border: 1px solid black;
   background-color: white;
@@ -500,12 +500,12 @@ textarea {
   width: 50%;
   color: rgb(102, 102, 102);
 }
-input[type=checkbox] {
+#reviews input[type=checkbox] {
   width:17px;
   height:17px;
   margin-top: 0px;
 }
-.container {
+#reviews .container {
   display: inline-block;
   position: relative;
   border-radius: 4%;
@@ -519,7 +519,7 @@ input[type=checkbox] {
   border: 1px solid #cccccc;
   box-shadow: #ffffff 0px 1px 0px 0px, #ffffff 0px 1px 0px 0px inset;
 }
-.checkmark {
+#reviews .checkmark {
   position: absolute;
   top: 25%;
   left: 30%;
@@ -528,23 +528,23 @@ input[type=checkbox] {
   background-color:blue;
   border-radius: 50%;
 }
-.container:hover {
+#reviews .container:hover {
   background-color: rgb(170, 170, 170);
 }
-.selected {
+#reviews .selected {
   background-color: rgb(170, 170, 170);
 }
-.checkmark:after {
+#reviews .checkmark:after {
   content: "";
   position: absolute;
   display: none;
 }
-.spinner {
+#reviews .spinner {
   width: 100%;
   height: 100%;
   position: absolute;
 }
-.spinner img {
+#reviews .spinner img {
   position: relative;
   left: 45%;
   top: 25%;
@@ -553,10 +553,10 @@ input[type=checkbox] {
   z-index: 2;
 
 }
-.container input:checked ~ .checkmark:after {
+#reviews .container input:checked ~ .checkmark:after {
   display: block;
 }
-.container .checkmark-after {
+#reviews .container .checkmark-after {
  	top: 19px;
 	left: 39px;
 	width: 8px;
@@ -564,56 +564,56 @@ input[type=checkbox] {
 	border-radius: 50%;
 	background: rgb(0, 102, 180);
 }
-.email-warning {
+#reviews .email-warning {
   font-size: 11.4px;
   line-height: 19.5px;
   font-family: Arial, Helvetica, sans-serif;
   margin: 10px 0;
 }
-.status-check {
+#reviews .status-check {
   position: absolute;
   top: 0;
   right: 0;
   width: 100px;
   margin-right: 5%;
 }
-.modal-wrapper {
+#reviews .modal-wrapper {
   position: relative;
 }
-.check-gray {
+#reviews .check-gray {
   color: #767676;
   margin-right: 6%;
   float: right;
 }
-.check-hidden,
+#reviews .check-hidden,
 .hidden {
   display: none;
 }
-.check-green {
+#reviews .check-green {
   color: #338b2b;
   float: right;
   margin-right: 6%;
 }
-.check-red {
+#reviews .check-red {
   color: rgb(180, 48, 52);
   border: solid 1px rgb(180, 48, 52);
   border-radius: 13px;
 }
-.required-header {
+#reviews .required-header {
   color: rgb(180, 48, 52);
 }
-.required-border {
+#reviews .required-border {
   border-color : rgb(180, 48, 52);
 }
-.icon {
+#reviews .icon {
   border: 0px;
   display: inline-block;
 }
-.required-text {
+#reviews .required-text {
   display: inline-block;
   padding: 5px;
 }
-.arrow {
+#reviews .arrow {
   width: 0; 
   height: 0; 
   float: left;
@@ -623,24 +623,24 @@ input[type=checkbox] {
   border-left: 11px solid rgb(229, 229, 229);
   display: block;
 }
-.arrow-container {
+#reviews .arrow-container {
   display: absolute;
   margin-top: 10px;
   width: auto;
   height: auto;
 }
-.margin-left {
+#reviews .margin-left {
   margin-left: 20px;
 }
-.product-info-text {
+#reviews .product-info-text {
   font-family: Sentinel, Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 48px;
   font-size: 16px;
 }
-#product-info {
+#reviews #product-info {
   padding: 5%;
 }
-.sort-text {
+#reviews .sort-text {
   position: absolute;
   padding: 5px;
   margin: 1em 0 3em;
@@ -655,7 +655,7 @@ input[type=checkbox] {
   height: 78px;
   left: -160px;
 }
-.sort-text:before {
+#reviews .sort-text:before {
   top: -20px;
   bottom: auto;
   left: auto;
@@ -671,7 +671,7 @@ input[type=checkbox] {
   display: block;
   width: 0;
 }
-.sort-text:after {
+#reviews .sort-text:after {
   top: -13px;
   bottom: auto;
   left: auto;
@@ -687,6 +687,6 @@ input[type=checkbox] {
   display: block;
   width: 0;
 }
-.sort-text-container {
+#reviews .sort-text-container {
   position: relative;
-}
+}#reviews 
