--- a/public/styles.css
+++ b/public/styles.css
@@ -33,6 +33,8 @@
   float: right;
   position: relative;
   margin-right: 5px;
+  height: 22px;
+  width: 22px;
 }
 #reviews .cancel:hover {
   color: #505050;
