--- a/public/styles.css
+++ b/public/styles.css
@@ -147,6 +147,7 @@
   font-size: 16px;
   font-weight: 700px;
   line-height: 24px;
+  max-width: 500px;
 }
 #reviews .review-body {
   display: grid;
